css/layout.css
/* ... */
    @media (prefers-color-scheme: dark) {
        header {
            background: var(--Onyx);
        }
    }

    header a {
    /*  This ensures that *all* links in the header bar have clearance
     *  on the right to space out the icons and links.
     */
        margin-right:   20px;
        padding-left:    5px;
        padding-top:    15px;
        padding-bottom: 10px;
        padding-right:  10px;
        padding-left:   10px;
        border-bottom:   none;
        text-decoration: none;
    }
        header a:hover img {
            filter: invert(100%) !important;
        }

    header a.header-name {
        color: var(--Dark-Orange);
        font-size: 24pt;
    }
        header a.header-name:hover {
            color: var(--Isabelline);
            background: var(--Dark-Orange);
        }
            @media (prefers-color-scheme: dark) {
                header a.header-name {
                    filter: invert(100%) !important;
                }
                    header a.header-name:hover {
                        filter: invert(100%) !important;
                    }
                    header a.header-name:hover img {
                    /*  This code fixes the face emoji to stop it from
                     *  inverting to a blue against a blue background.
                     *  It now stays yellow on hover.
                     */
                        filter: none !important;
                    }
            }

    header a.header-about {
        color: var(--Iain-Blue-Simpson);
    }
        header a.header-about:hover {
            color: var(--Isabelline);
            background: var(--Iain-Blue-Simpson);
        }
            @media (prefers-color-scheme: dark) {
                header a.header-about {
                    filter: invert(100%) !important;
                }
                    header a.header-about:hover {
                        filter: invert(100%) !important;
                    }
            }

    header a.header-blog {
        color: var(--Dark-Orange);
    }
        header a.header-blog:hover {
            color: var(--Isabelline);
            background: var(--Dark-Orange);
        }
            @media (prefers-color-scheme: dark) {
                header a.header-blog {
                    filter: invert(100%) !important;
                }
                    header a.header-blog:hover {
                        filter: invert(100%) !important;
                    }
            }

    header a.header-linkedin {
        color: var(--Dark-Cornflower-Blue);
    }
        header a.header-linkedin:hover {
            color: var(--Isabelline);
            background: var(--Dark-Cornflower-Blue);
        }
            @media (prefers-color-scheme: dark) {
                header a.header-linkedin {
                    filter: invert(100%) !important;
                }
                    header a.header-linkedin:hover {
                        filter: invert(100%) !important;
                    }
            }

    header a.header-email {
        color: var(--Davys-Gray);
    }
        header a.header-email:hover {
            color: var(--Isabelline);
            background: var(--Davys-Gray);
        }
            @media (prefers-color-scheme: dark) {
                header a.header-email {
                    filter: invert(100%) !important;
                }
                    header a.header-email:hover {
                        filter: invert(100%) !important;
                    }
            }


/*
 * ███╗   ███╗ █████╗ ██╗███╗   ██╗    ██████╗  ██████╗ ██████╗ ██╗   ██╗
 * ████╗ ████║██╔══██╗██║████╗  ██║    ██╔══██╗██╔═══██╗██╔══██╗╚██╗ ██╔╝
 * ██╔████╔██║███████║██║██╔██╗ ██║    ██████╔╝██║   ██║██║  ██║ ╚████╔╝
 * ██║╚██╔╝██║██╔══██║██║██║╚██╗██║    ██╔══██╗██║   ██║██║  ██║  ╚██╔╝
 * ██║ ╚═╝ ██║██║  ██║██║██║ ╚████║    ██████╔╝╚██████╔╝██████╔╝   ██║
 * ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝    ╚═════╝  ╚═════╝ ╚═════╝    ╚═╝
 */

main {
    margin-left:   50px;
    margin-right:  50px;
    font-family: "Poppins",
                  sans-serif;
    font-weight:  400;
    font-size:     14pt;
    line-height:  160%;
    margin-bottom: 40px;
    padding-top: 80px;
}


h2 {
    font-family: "sitelen-pona-pona",
                 "Futura",
                 "Poppins",
                 "Century Gothic",
                  sans-serif;
    font-size:    24pt;
    font-weight:  bold;
    font-variant-ligatures: none;
}


p.post-tags {
    font-family: "sitelen-pona-pona",
                 "Futura",
                 "Poppins",
                 "Century Gothic",
                  sans-serif;
    font-size:    16pt;
    font-variant-ligatures: none;
}

a.post-tags-link {
    font-family: "sitelen-pona-pona",
                 "Futura",
                 "Poppins",
                 "Century Gothic",
                  sans-serif;
    font-feature-settings: "liga" 1;
    color: var(--Iain-Blue-Simpson);
    border-bottom: none;
}
    a.post-tags-link:hover {
        font-family: "sitelen-pona-pona",
                     "Futura",
                     "Poppins",
                     "Century Gothic",
                      sans-serif;
        font-feature-settings: "liga" 1;
        color: var(--Dark-Orange);
}

p + p {
    text-indent: 28pt;
    margin-top: -10pt;
}

blockquote {
    font-style:    italic;
    padding-left:  24pt;
    padding-right: 24pt;
    border-left: 12px solid var(--Dark-Orange);
}
    blockquote em {
    /*  This code makes <em>phasised text within a blockquote appear
     *  as roman, since the main body of the quote is italic.
     */
        font-style: normal;
    }
/* ... */

